tests/negative/expr_reify_ambig.lev
// LA-31 Stage 3 §3 — ambiguous lambda argument (E3, R2): a lambda literal
// matches both a FuncRef and an expr::Expr overload at the same tier.
class User { int age; new User(int g) { age = g; } }
string over(expr::Expr<(User)=>bool> e) { return "expr"; }
string over((User)=>bool f) { return "func"; }
console.writeln(over((u) => u.age > 0));
